# LR1

./: CMakeLists.txt
.github/workflows/: checks.yml
lib/: CMakeLists.txt  lr1.cpp  lr1.h
tests/: CMakeLists.txt  lr1_test.cpp
